--- a/templates/components/room_list_table.html
+++ b/templates/components/room_list_table.html
@@ -7,9 +7,12 @@
         <th>users</th>
         <th>created</th>
         <th>last_active</th>
-        <th></th>
+        <th><button class="btn green">Create Room</button> </th>
     </tr>
+
     {% for room in rooms %}
         {% include "fragments/room_table_row.html" %}
+        {% else %}
+        <tr><td colspan="8"><h3>You Havent Got Any Rooms Yet. Go Ahead and create some!</h3></td></tr>
     {% endfor %}
 </table>
