--- a/CoderPad/templates/components/room_list_table.html
+++ b/CoderPad/templates/components/room_list_table.html
@@ -7,7 +7,7 @@
         <th>users</th>
         <th>created</th>
         <th>last_active</th>
-        <th><button class="btn green">Create Room</button> </th>
+        <th><a href="/admin/create_room" class="btn green">Create Room</a> </th>
     </tr>
 
     {% for room in rooms %}
