you should now be able to delete rooms and users

--- a/CoderPad/templates/components/room_list_table.html
+++ b/CoderPad/templates/components/room_list_table.html
@@ -16,3 +16,13 @@
         <tr><td colspan="8"><h3>You Havent Got Any Rooms Yet. Go Ahead and create some!</h3></td></tr>
     {% endfor %}
 </table>
+<script>
+    function delete_room(room_name,room_id){
+        if(confirm("Really Delete Room "+room_name+"?")){
+            if(confirm("You should probably disable the room, not delete it... are you sure you want to delete it?")) {
+                $.get("/admin/delete/room/" + room_id.toString())
+            }
+        }
+    }
+
+</script>
