redirect and refresh page after deleteing a room

--- a/CoderPad/templates/components/room_list_table.html
+++ b/CoderPad/templates/components/room_list_table.html
@@ -20,7 +20,7 @@
     function delete_room(room_name,room_id){
         if(confirm("Really Delete Room "+room_name+"?")){
             if(confirm("You should probably disable the room, not delete it... are you sure you want to delete it?")) {
-                $.get("/admin/delete/room/" + room_id.toString())
+                document.location.href = "/admin/delete/room/" + room_id.toString()
             }
         }
     }
