disable language selection until it actually does something

--- a/CoderPad/templates/create_session.html
+++ b/CoderPad/templates/create_session.html
@@ -27,8 +27,8 @@
 <div class="row">
     <form class="col s12" method="post">
       <div class="row">
-        <div class="input-field col s12">
-          <input type="text" id="autocomplete-input" class="autocomplete" value="Python">
+        <div class="disabled col s12">
+          <input disabled type="text" id="autocomplete-input" class="autocomplete disabled" value="Python">
           <input type="hidden" id="room_language" name="room_language" value="python">
           <label for="autocomplete-input">Language</label>
         </div>
